This this the changelog file for the Pothos C++ library.

Release 0.7.1 (pending)
==========================

- Fix std::vector<bool> emplace_back missing

Release 0.7.0 (2020-07-19)
==========================

Additions:

- Added PothosUtil --num-trials option for tests
- Added PothosUtil --list-modules
- Octal support for muparserx expressions

API Changes:

- Added ExceptionForErrorCode exception class with error code
- New test assert macros for comparisons
- Added equality operator for Object class to other type
- Added Block::prepare() API call to be called before work()
- Callable API support for std::function
- Added function to query Pothos module search paths
- Added std::function support for Callable API
- Added calls setOut/InputAlias() for Topology API
- Update poco submodule to poco-1.9.0-release
- OutputPort::getBuffer() returns the exact specified buffer length
- Added OutputPort::getBuffer() with specified data type variant
- Version reporting API and build support for loadable modules

Fixes:

- Move probe handlers into worker actor - fixes python overload
- Fixes for circular buffer alias calculation

Release 0.6.1 (2018-04-30)
==========================

- Fixed BufferPool::get() unique check from buffer refactor work
- Remove arbitrary argument limit from Callable::opaqueCall()
- Additional error handling when RemoteServer fails to launch process
- Added support for PothosUtil to query information about loaded modules
- Fix for potential overrun in Block Description if the line is empty.

Release 0.6.0 (2017-12-25)
==========================

- Updated internal poco submodule to poco-1.8.0.1-release
- Removed deprecated API call OutputPort::popBuffer()
- Re-implement RingDeque container to use std::allocator
- Removed previously unused ObjectM class (mutable object)
- Added Pothos::Util::SpinLockRW for single write, multi-read
- API changes to Object, Proxy, and Callable interface types